style: adjust Lemonade theme for correct light/dark mode support

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,31 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
+  --ifm-color-primary: #4ECDC4;
+  --ifm-color-primary-dark: #2A2D34;
+  --ifm-color-primary-darker: #1E2024;
   --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
+  --ifm-color-primary-light: #95E1D3;
+  --ifm-color-primary-lighter: #AEEBFF;
   --ifm-color-primary-lightest: #3cad6e;
+  --ifm-background-color: #F8FAFC;
+  --ifm-background-surface-color: #E8E8E8;
+  --ifm-font-color-base: #2A2D34;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.05);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
+  --ifm-color-primary: #4ECDC4;
+  --ifm-color-primary-dark: #1E2024;
+  --ifm-color-primary-darker: #1E2024;
   --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
+  --ifm-color-primary-light: #95E1D3;
+  --ifm-color-primary-lighter: #AEEBFF;
   --ifm-color-primary-lightest: #4fddbf;
+  --ifm-background-color: #1E2024;
+  --ifm-background-surface-color: #2A2D34;
+  --ifm-font-color-base: #E8E8E8;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
